.ci-logs/last-build-error.log
Cannot remap modifiers because it does not exists in any of the targets [] or their parents.
/home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/module/combat/AutoTotem.java:21: error: cannot find symbol
/home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/module/combat/AutoArmor.java:36: error: cannot find symbol
/home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/module/combat/AutoArmor.java:41: error: cannot find symbol
/home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/module/misc/Spam.java:19: error: incompatible types: Double cannot be converted to int
  /home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/module/misc/Spam.java:19: error: incompatible types: Double cannot be converted to int
  /home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/module/combat/AutoTotem.java:21: error: cannot find symbol
  /home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/module/combat/AutoArmor.java:36: error: cannot find symbol
  /home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/module/combat/AutoArmor.java:41: error: cannot find symbol
---FULL TAIL---
Here are the highlights of this release:
 - Improved Configuration Cache hit rates
 - Additional CLI rendering options
 - Important project hierarchy lookup deprecations

For more details see https://docs.gradle.org/9.6.1/release-notes.html

Starting a Gradle Daemon (subsequent builds will be faster)

> Configure project :
Fabric Loom: 1.14.10

Cannot remap modifiers because it does not exists in any of the targets [] or their parents.

> Task :compileJava
/home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/module/combat/AutoTotem.java:21: error: cannot find symbol
        if (inv.offHand.get(0).isOf(Items.TOTEM_OF_UNDYING)) return;
               ^
  symbol:   variable offHand
  location: variable inv of type PlayerInventory
/home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/module/combat/AutoArmor.java:36: error: cannot find symbol
            int bestVal = armorValue(inv.armor.get(armorIdx));
                                        ^
  symbol:   variable armor
  location: variable inv of type PlayerInventory
/home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/module/combat/AutoArmor.java:41: error: cannot find symbol
                if (stack.getItem() instanceof ArmorItem ai && ai.getSlotType() == slot) {
                                               ^
  symbol:   class ArmorItem
  location: class AutoArmor
/home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/module/misc/Spam.java:19: error: incompatible types: Double cannot be converted to int
        if (++ticker >= (int) delay.getValue()) {
                                            ^
Note: /home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/gui/HudRenderer.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
4 errors

> Task :compileJava FAILED

[Incubating] Problems report is available at: file:///home/runner/work/Azelux-Client/Azelux-Client/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava' (registered by plugin class 'org.gradle.api.plugins.JavaBasePlugin').
> Compilation failed; see the compiler output below.
  Note: /home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/gui/HudRenderer.java uses or overrides a deprecated API.
  Note: Recompile with -Xlint:deprecation for details.
  /home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/module/misc/Spam.java:19: error: incompatible types: Double cannot be converted to int
          if (++ticker >= (int) delay.getValue()) {
                                              ^
  /home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/module/combat/AutoTotem.java:21: error: cannot find symbol
          if (inv.offHand.get(0).isOf(Items.TOTEM_OF_UNDYING)) return;
                 ^
    symbol:   variable offHand
    location: variable inv of type PlayerInventory
  /home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/module/combat/AutoArmor.java:36: error: cannot find symbol
              int bestVal = armorValue(inv.armor.get(armorIdx));
                                          ^
    symbol:   variable armor
    location: variable inv of type PlayerInventory
  /home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/module/combat/AutoArmor.java:41: error: cannot find symbol
                  if (stack.getItem() instanceof ArmorItem ai && ai.getSlotType() == slot) {
                                                 ^
    symbol:   class ArmorItem
    location: class AutoArmor
  4 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights from a Build Scan (powered by Develocity).

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.6.1/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 1m
1 actionable task: 1 executed
